# ffxiv-rocat

./: .gitignore  base.py  main.py  pyproject.toml
dcview/: __init__.py  common.py  enums.py  item_search.py  model.py  protocol.py
dcview/alias/: add.py  delete.py  enums.py  modal.py  panel.py  search.py  update.py  validate.py
dcview/buy/: button_panel.py  dropdown.py  modal.py  result.py  search.py
dcview/submarine/: config.py  enums.py  infoboard.py  modal.py  panel.py  rename.py
gamble/: embed.py
itemdict/: __init__.py  enums.py  itemdict.py  model.py
market/: embed.py  enums.py  itemdict.py  model.py  search.py
market/data/: item.json  item_alias.json  item_cn.json  item_hotfix.json  item_pinyin.json
market/submarine/: base.py  config.py  manager.py  model.py  parser.py  seadict.py  submarine.py
market/submarine/data/: clean_config.json  clean_state.json  config.json  sea.json  state.json
market/universalis/: client.py  middleware.py  response.py
submarine/: config.py  enums.py  manager.py  model.py  parser.py  seadict.py  submarine.py
submarine/data/: clean_config.json  clean_state.json  config.json  state.json  zh.json
submarine/deprecated/: manager.py
submarine/future/: _ManagedSubmarine.py  _SubmarineManager.py
utils/: cache.py  countdown_task.py  datetime.py  item_cn_encoder.py  item_encoder.py  orderedset.py  pinyin_encoder.py  tc2sc_encoder.py
worker/: alias.py  gamblehelper.py  pricecheck.py  pricechecker.py  submarine.py  submarine_info_board.py  worker.py
