[project]
name = "ffxiv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bidict>=0.23.1",
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "opencc>=1.2.0",
    "pypinyin>=0.55.0",
    "pytz>=2026.1.post1",
    "rapidfuzz>=3.14.3",
]
